# containerization-demo

./: Dockerfile  README.md  pyproject.toml
containerization/: main.py
