[tool.poetry]
name = "containerization"
version = "0.1.0"
description = "Demo project"
authors = ["Daniel Restrepo <daniel.restrepo@unillanos.edu.co>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
